--- a/package.json
+++ b/package.json
@@ -1,35 +1,37 @@
 {
-    "name": "sequelize-connection",
-    "version": "1.1.0",
-    "description": "Configure to connect to database by Sequelize.",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
-    "repository": "https://github.com/nqnghia285/sequelize-connecttion.git",
-    "author": "nghia <nqnghia285@gmail.com>",
-    "license": "MIT",
-    "private": false,
-    "scripts": {
-        "test": "echo \"Error: no test specified $npm_package_version\" && exit 1",
-        "prepare": "tsc",
-        "git": "git add -A && git commit -m \"Update version: %npm_package_version%\" && git push",
-        "push": "yarn publish",
-        "v": "yarn version --patch"
-    },
-    "homepage": "https://github.com/nqnghia285/sequelize-connecttion.git#readme",
-    "keywords": [
-        "sequelize-connect-database",
-        "connect",
-        "sequelize"
-    ],
-    "files": [
-        "dist"
-    ],
-    "dependencies": {
-        "@types/dotenv": "^8.2.0",
-        "dotenv": "^8.2.0",
-        "sequelize": "^6.6.2"
-    },
-    "devDependencies": {
-        "cross-conf-env": "^1.2.1"
-    }
+	"name": "sequelize-connection",
+	"version": "1.1.1",
+	"description": "Configure to connect to database by Sequelize.",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"repository": "https://github.com/nqnghia285/sequelize-connecttion.git",
+	"author": "nghia <nqnghia285@gmail.com>",
+	"license": "MIT",
+	"private": false,
+	"scripts": {
+		"test": "echo \"Error: no test specified $npm_package_version\" && exit 1",
+		"prepare": "tsc",
+		"git": "git add -A && git commit -m \"Update version: %npm_package_version%\" && git push",
+		"push": "yarn publish",
+		"v": "yarn version --patch"
+	},
+	"homepage": "https://github.com/nqnghia285/sequelize-connecttion.git#readme",
+	"keywords": [
+		"sequelize-connect-database",
+		"connect",
+		"sequelize"
+	],
+	"files": [
+		"dist"
+	],
+	"dependencies": {
+		"@types/dotenv": "^8.2.0",
+		"@types/node": "^15.9.0",
+		"@types/validator": "^13.1.3",
+		"dotenv": "^8.2.0",
+		"sequelize": "^6.6.2"
+	},
+	"devDependencies": {
+		"cross-conf-env": "^1.2.1"
+	}
 }
